--- a/adanet_lab.ipynb
+++ b/adanet_lab.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "#  you may not use this file except in compliance with the License.\n",
+    "#  You may obtain a copy of the License at\n",
+    "#\n",
+    "#   http://www.apache.org/licenses/LICENSE-2.0\n",
+    "#\n",
+    "#  Unless required by applicable law or agreed to in writing, software\n",
+    "#  distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "#  See the License for the specific language governing permissions and\n",
+    "#  limitations under the License.\n",
+    "\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -141,6 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \n",
+    "\n",
     "def cnn_model(features, labels, mode, params):\n",
     "    images = list(features.values())[0]\n",
     "    \n",
@@ -614,6 +628,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# base code: https://github.com/tensorflow/adanet/blob/master/adanet/examples/tutorials/customizing_adanet.ipynb\n",
+    "\n",
     "class CNNBuilder(adanet.subnetwork.Builder):\n",
     "    def __init__(self, n_convs):\n",
     "        self._n_convs = n_convs\n",
@@ -1266,11 +1282,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Code references:\n",
+    "1. https://github.com/tensorflow/adanet/blob/master/adanet/examples/tutorials/customizing_adanet.ipynb\n",
+    "2. https://github.com/tensorflow/adanet/blob/master/adanet/examples/tutorials/adanet_objective.ipynb\n",
+    "3. https://github.com/tensorflow/models/blob/master/samples/core/get_started/custom_estimator.py"
+   ]
   }
  ],
  "metadata": {
